# dtolnay-proc-macro-workshop

./: Cargo.toml  main.rs
builder/: Cargo.toml  README.md
builder/src/: lib.rs  parse.rs
builder/tests/: 02-create-builder.rs  03-call-setters.rs  04-call-build.rs  07-repeated-field.rs
components/: Cargo.toml
components/src/: analyze.rs  generate.rs  lib.rs  parse.rs
