[package]
name = "components"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["extra-traits", "full"] }
proc-macro-error = "1.0.4"
